# wdidt

./: .gitignore  README.md  new_day.py  pyproject.toml
.github/workflows/: pr_ci.yaml
test/: test_new_day.py
wdidt/: __main__.py  new_day.py
wdidt/templates/: daily_default.md  weekly_default.md
wdidt/templates/daily/: default.md
wdidt/templates/weekly/: default.md
