[project]
name = "wdidt"
version = "1.0.0"
authors = [
    {name = "Derek Keeler", email = "derek@suchcool.ca"},
]
description = "What Did I Do Today? Simple application that helps track daily work to be done, supporting plain text search throughout."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "types-docopt"
]